# BlackWidow

./: .gitignore  .readthedocs.yaml  CONTRIBUTING.md  NEWS.md  README.md  blackwidow_env.yml  example_manga_maps.fits  license  pyproject.toml  requirements.txt  scaling_relations_Curti2020.py
BlackWidowPipeline/: calculate_extinction_correction.py  calculate_line_ratios.py  prepare_input.py  run_emcee.py  scaling_relations_Curti2020.py
docs/: conf.py  index.rst
docs/apidocs/: index.rst
docs/apidocs/BlackWidowPipeline/: BlackWidowPipeline.calculate_extinction_correction.rst  BlackWidowPipeline.calculate_line_ratios.rst  BlackWidowPipeline.prepare_input.rst  BlackWidowPipeline.rst  BlackWidowPipeline.scaling_relations_Curti2020.rst
tests/: sample.fits  test_calculate_extinction_correction.py  test_calculate_line_ratios.py  test_prepare_input.py  test_run_emcee.py  test_scaling_relations_Curti2020.py
