[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "BlackWidows"
version = "0.0.1"
authors = [
  { name='Nick Boardman', email="nfb@st-andrews.ac.uk"},
  { name='Roya Hamedani Golshan', email='rhgolshan@ph1.uni-koeln.de'},
  { name='Bron Reichardt Chu', email='bronwyn.j.reichardtchu@durham.ac.uk' },
  { name="Yuankang Liu", email="yuankang.liu@gmail.com" },
  { name="Bjarki Bjorgvinsson", email="bjarki.bjorgvinsson@durham.ac.uk" },
  { name="Kate Harborne", email="katherine.e.harborne@durham.ac.uk"}
]
description = "Galaxy evolution, ISM & Chemistry"
readme = "README.md"
requires-python = ">=3.9"

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = [
    "LICENSE",
]
